--- a/index.html
+++ b/index.html
@@ -4,16 +4,41 @@
     <meta charset="utf-8">
     <title>Page title</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <script   src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"   integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw="   crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
   </head>
   <body>
-    <h1>Country search engine</h1>
-    <button id="search">Search a country</button>
-    <input id="country-name" type="text" />
-    <h2>List of countries</h2>
-    <ul id="countries">
-      <li>No data</li>
-    </ul>
+    <div class="flex_container">
+      <div class="search element">
+        <h1>Country search engine</h1>
+        <div class="search_wrapper">
+          <button id="search"><i class="fa fa-search"></i></button>
+          <input id="country-name" type="text" />
+        </div>
+      </div>
+      <div class="result element">
+        <h2>List of countries</h2>
+        <ul id="countries">
+          <li>No data</li>
+        </ul>
+      </div>
+      <div class="element compare">
+        <div class="element country_one">
+          <h2>Country one</h2>
+          <ul class='list'></ul>
+          <div id="draw-field-one" class="draw"></div>
+          <div id="draw-field-three" class="draw"></div>
+        </div>
+        <div class="element country_two">
+          <h2>Country two</h2>
+          <ul class='second_list'></ul>
+          <div id="draw-field-two" class="draw"></div>
+          <div id="draw-field-four" class="draw"></div>
+        </div>
+      </div>
+    </div>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
